@@ -1,3 +1,12 @@
+2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* hw/xfree86/fbdevhw/Makefile.am:
+	Clean up generated files to pass distcheck
+
+	* hw/xfree86/getconfig/Makefile.am:
+	Clean up generated files to pass distcheck
+	Distribute getconfig.man.pre, not getconfig.man
+
 2005-10-05  Kristian Høgsberg  <krh@redhat.com>
 
 	* afb/Makefile.am:
